# RAGASSERVICE

./: .gitignore  Dockerfile  LICENSE  README.md  development_plan.md  development_progress_tracker.md  docker-compose.yml  github_setup_checklist.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: development.yaml.example
docs/: development_plan.md  progress_tracker.md
docs/setup/: github_issues_guide.md  project_structure_setup.md
scripts/: setup_commands.sh
src/: __init__.py
